--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Anywhere GPT</string>
+    <string name="app_name">Rewaed</string>
 
     <!-- Labels -->
     <string name="label_app_version">App Version %s</string>
