update app logo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="token_length">400</string>
 
     <!-- Toolbar Titles -->
-    <string name="toolbar_title_anywhere_gpt">Anywhere GPT</string>
+    <string name="toolbar_title_anywhere_gpt">Rewaed</string>
     <string name="toolbar_title_faqs">FAQs</string>
     <string name="toolbar_title_settings">Settings</string>
 
